@@ -1,3 +1,7 @@
+2019-03-29 Magnus Hagdorn
+ * piccolo3/client/PiccoloDataDir.py: add methods to get list of runs; list of
+   spectra and to get spectra
+
 2019-03-27 Magnus Hagdorn
  * piccolo3/client/PiccoloDataDir.py: fix bug
 
